Nationwide_2024/Assignment01/02Chungnam/답지/Terraform/manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: customer-deploy
  namespace: wsc2024
  labels:
    app: customer
spec:
  replicas: 2
  selector:
    matchLabels:
      app: customer
  template:
    metadata:
      labels:
        app: customer
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: app
                operator: In
                values:
                - db
      containers:
        - name: customer-container
          image: 950274644703.dkr.ecr.us-east-1.amazonaws.com/customer-repo:latest
          lifecycle: 
            preStop: 
              exec:
                command: ["sleep", "20"]
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 250m
              memory: 500Mi
      restartPolicy: Always

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-deploy
  namespace: wsc2024
  labels:
    app: product
spec:
  replicas: 2
  selector:
    matchLabels:
      app: product
  template:
    metadata:
      labels:
        app: product
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: app
                operator: In
                values:
                - db
      containers:
        - name: product-container
          image: 950274644703.dkr.ecr.us-east-1.amazonaws.com/product-repo:latest
          lifecycle: 
            preStop: 
              exec:
                command: ["sleep", "20"]
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 250m
              memory: 500Mi
      restartPolicy: Always

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-deploy
  namespace: wsc2024
  labels:
    app: order
spec:
  replicas: 2
  selector:
    matchLabels:
      app: order
  template:
    metadata:
      labels:
        app: order
    spec:
      affinity:
        nodeAffinity:
          requiredDuringSchedulingIgnoredDuringExecution:
            nodeSelectorTerms:
            - matchExpressions:
              - key: app
                operator: In
                values:
                - db
      containers:
        - name: order-container
          image: 950274644703.dkr.ecr.us-east-1.amazonaws.com/order-repo:latest
          lifecycle: 
            preStop: 
              exec:
                command: ["sleep", "20"]
          livenessProbe:
            httpGet:
              path: /healthcheck
              port: 8080
            initialDelaySeconds: 5
            periodSeconds: 5
          imagePullPolicy: IfNotPresent
          resources:
            limits:
              cpu: 250m
              memory: 500Mi
      restartPolicy: Always
